# access-nri-intake-catalog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.rst  COPYRIGHT  README.md  README.rst  benchmark.py  benchmark_cc.sh  environment-dev.yaml  environment.yaml  metadata.yaml  mypy.ini  plot_scaling.ipynb  pyproject.toml  requirements.txt  sandpit.ipynb  setup.cfg  setup.py  tox.ini  versioneer.py
.conda/: environment.yaml  meta.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  catalog-data-request.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  e2e.yaml  gadi_deploy.yml  pixi-lock-diff.yml  pre-commit.yaml  project.yml
catalog_manager/: _version.py  build.py  parsers.py
catalog_manager/esm/: __init__.py  base.py  utils.py
catalogs/: cat.yaml  cat_old.yaml  test.yaml  test_outer.yaml
ci/: environment-3.10.yaml  environment-3.10.yml  environment-3.11.yaml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml  environment-3.14.yml  environment-3.9.yml
config/: access-cm2.yaml  access-esm1-5.yaml  access-mopper.yaml  access-om2.yaml  accessesm15.yaml  accessom2.yaml  aus2200.yaml  barpa.yaml  barra2.yaml  ccam.yaml  cmip5.yaml  cmip6.yaml  cordex.yaml  cosima.yaml  era5.yaml  erai.yaml  esgf-ref.yaml  esmvaltool-obs.yaml  metadata.yaml  mom6.yaml  narclim2.yaml  online-mlt.yaml  romsiceshelf.yaml  woa-13.yaml  woa.yaml  woa23.yaml
config/experiments/cmip5-al33/: metadata.yaml
config/experiments/cmip5-rr3/: metadata.yaml
config/experiments/cmip6-fs38/: metadata.yaml
config/experiments/cmip6-oi10/: metadata.yaml
config/experiments/cmip6_ig45/: metadata.yaml
config/experiments/rcm_ccam_hq89/: metadata.yaml
config/metadata_sources/aus2200/: metadata.yaml
config/metadata_sources/barpa-py18/: metadata.yaml
config/metadata_sources/barra2-ob53/: metadata.yaml
config/metadata_sources/cmip5-al33/: metadata.yaml
config/metadata_sources/cmip5-rr3/: metadata.yaml
config/metadata_sources/cmip6-fs38/: metadata.yaml
config/metadata_sources/cmip6-oi10/: metadata.yaml
config/metadata_sources/cordex-ig45/: metadata.yaml
config/metadata_sources/era5-rt52/: metadata.yaml
config/metadata_sources/esgf-ref-qv56/: metadata.yaml
config/metadata_sources/esmvaltool-obs-ct11/: metadata.yaml
config/metadata_sources/mom6-panant-0025-zstar-ACCESSyr2-ol01/: metadata.yaml
config/metadata_sources/mom6-panant-005-zstar-ACCESSyr2-ol01/: metadata.yaml
config/metadata_sources/mom6-panant-01-zstar-ACCESSyr2-ol01/: metadata.yaml
config/metadata_sources/narclim2-zz63/: metadata.yaml
config/metadata_sources/rcm-ccam-hq89/: metadata.yaml
config/metadata_sources/shackleton_v4_jk72/: metadata.yaml
config/metadata_sources/woa-13/: metadata.yaml
config/metadata_sources/woa23/: metadata.yaml
docs/: Makefile  conf.py  environment-doc.yaml  generate_includes.py  index.rst  project_list.rst  storage_flags.rst
docs/contributing/: code.rst  docs.rst  index.rst  issues.rst  sources.rst
docs/datastore_creation/: adding.rst  builder_create.rst  builders.rst  index.rst  tutorial.ipynb
docs/datastores/: adding.rst  builders.rst  index.rst  quickstart.ipynb  tutorial.ipynb
docs/development/: contrib_catalog.rst  contrib_code.rst  contrib_docs.rst  index.rst
docs/getting_started/: index.rst
docs/how_tos/: building_intake-esm_catalogs.ipynb  example_usage.ipynb  index.rst
docs/management/: api.rst  building.rst  catalog.rst  external.rst  index.rst  metadata.yaml  overview.rst  release.rst  schema.rst  source.rst
docs/reference/: API_reference.rst  api.rst  index.rst
docs/usage/: aliases.rst  aliases_demo.ipynb  chunking.ipynb  faq.rst  how.rst  index.rst  quickstart.ipynb  telemetry.rst  tutorial.ipynb  what.rst
docs/using_the_catalog/: how.rst  index.rst  tutorial.ipynb  what.rst  what_is_the_catalog.rst
e2e/: build_subset.sh  conftest.py  test_end_to_end.py
e2e/configs/: cmip5.yaml
mypy/: mypy_3.10.ini  mypy_3.11.ini  mypy_3.9.ini
notebooks/: building_intake-esm_catalogs.ipynb  example_usage.ipynb  plot_scaling.ipynb
scripts/: build_all.sh  build_all.sh.o81188596  build_all.sh.o81188597  build_all.sh.o81188598  build_all.sh.o81188599  build_all.sh.o81188600  build_all.sh.o81188601  build_all.sh.o81188602  build_all.sh.o81188603  build_all.sh.o81188605  run_scaling.sh  validate_metadata_yaml.py
shell/: build_all.sh
src/access_nri_intake/: __init__.py  _version.py  aliases.py  cli.py  cloud.py  metacatalog.yaml  utils.py
src/access_nri_intake/cat/: __init__.py  catalog.yaml  metacatalog.yaml
src/access_nri_intake/catalog/: __init__.py  manager.py  translators.py  utils.py
src/access_nri_intake/data/: __init__.py  catalog.yaml  config.yaml  metadata_schema_experiment.json  metadata_schema_file.json  telemetry.py  utils.py
src/access_nri_intake/esmcat/: __init__.py  builders.py
src/access_nri_intake/experiment/: __init__.py  colours.py  main.py  utils.py
src/access_nri_intake/ipython_magic/: __init__.py  ast.py  demo_nb.ipynb
src/access_nri_intake/metacat/: __init__.py  manager.py  translators.py
src/access_nri_intake/plugins/: __init__.py  moppy.py
src/access_nri_intake/source/: __init__.py  builders.py  utils.py
src/catalog_manager/: __init__.py  _version.py  build.py  cli.py  dfcat.py  dfcatalog.yaml  metadata.py  translator.py  translators.py
src/catalog_manager/esm/: __init__.py  base.py  cosima.py  utils.py
src/catalog_manager/esmcat/: __init__.py  accessesm15.py  accessom2.py  base.py  builders.py  cosima.py  schema.json  schema.yaml  utils.py
src/catalog_manager/metacat/: __init__.py  core.py  manager.py  schema.json  schema.yaml  translators.py
tests/: conftest.py  test_aliases.py  test_ast_magic.py  test_builders.py  test_cli.py  test_cloud.py  test_data.py  test_environ.py  test_experiment.py  test_manager.py  test_metadata_sources.py  test_moppy_plugin.py  test_source_utils.py  test_translators.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  test_datasets_representative.py  test_end_to_end.py
(+707 files in other folders)
