[project]
name = "access_nri_intake"
authors = [
    { name = "ACCESS-NRI" },
]
description = "Intake catalog managed by ACCESS-NRI and associated tools"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cftime",
    "ecgtools>=2023.7.13",
    "intake>=2.0.0",
    "intake-dataframe-catalog>=0.3.1",
    "intake-esm>=2025.2.3",
    "jsonschema",
    "pooch",
    "xarray",
    "colorama",
    "yamanifest",
    "access-py-telemetry>=0.1.6",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
] 
e2e = [
    "pytest",
    "pytest-ordering",
]

[project.scripts]
catalog-build = "access_nri_intake.cli:build"
metadata-validate = "access_nri_intake.cli:metadata_validate"
metadata-template = "access_nri_intake.cli:metadata_template"
build-esm-datastore = "access_nri_intake.cli:use_esm_datastore"
scaffold-catalog-entry = "access_nri_intake.cli:scaffold_catalog_entry"

[project.entry-points."intake.catalogs"]
access_nri = "access_nri_intake.data:data"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
access_nri_intake = [
    "data/catalog.yaml",
    "data/metadata_schema_experiment.json",
    "data/metadata_schema_file.json",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/access_nri_intake/_version.py"
versionfile_build = "access_nri_intake/_version.py"
tag_prefix = "v"
parentdir_prefix = "access-nri-intake-"

[tool.coverage.run]
omit = [
    "*/_version.py",
    "*/data/__init__.py",
]

[tool.ruff]
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["access_nri_intake"]
